:Copyright: This document has been placed in the public domain.

.. contents::

Changes Since 0.9
=================


Release 0.9 (2012-05-02)
========================

* General:

  - New reStructuredText "code" role and directive and "code" option
    of the "include" directive with syntax highlighting by Pygments_.
  - Fix parse_option_marker for option arguments containing ``=``.

.. _Pygments: http://pygments.org/

* setup.py

  - Fix [ 2971827 ] and [ 3442827 ]
    extras/roman.py moved to docutils/utils/roman.py

* docutils/frontend.py

  - Fix [ 3481980 ] Use os.getcwdu() in make_paths_absolute().

* docutils/io.py

  - Fix [ 3395948 ] (Work around encoding problems in Py3k).
  - `mode` argument for FileOutput avoids code replication in
    BinaryFileOutput.
  - New exceptions InputError and OutputError for IO errors in
    FileInput/FileOutput.

* docutils/core.py:

  - No "hard" system exit on file IO errors: catch and report them in
    `Publisher.reportException` instead. Allows handling by a calling
    application if the configuration setting `traceback` is True.

* docutils/utils.py -> docutils/utils/__init__.py

  - docutils.utils is now a package (providing a place for sub-modules)

  .. note:: docutils/math, docutils/error_reporting.py, and
     docutils/urischemes.py will move to the utils package in the next
     release, too. See RELEASE-NOTES__

     __ RELEASE-NOTES.html

  - DependencyList uses io.FileOutput and 'utf8' encoding to prevent
    errors recording non-ASCII filenames (fixes [ 3434355 ]).

  - Fix relative_path() with source=None and `unicode` target.

* docutils/parsers/rst/states.py

  - Fix [ 3402314 ] allow non-ASCII whitespace, punctuation
    characters and "international" quotes around inline markup.
  - Use `field_marker` pattern to look for start of a
    directive option block (fixes [ 3484857 ]).

* docutils/parsers/rst/tableparser.py

  - Fix [ 2926161 ] for simple tables.